# whatsapp-chatbot

./: .gitignore  AGENTS.md  CLAUDE.md  app.py  cdk.json  pyproject.toml
.claude/: ralph-loop.local.md
backend/: knowledge-base.md  requirements.txt
backend/.claude/: ralph-loop.local.md
backend/app/config/: settings.py
backend/app/handlers/: admin_handler.py  webhook_handler.py
backend/app/services/: availability_service.py  pricing_service.py
backend/app/use_cases/: generate_ai_response.py  notify_owner.py  process_incoming_message.py
backend/app/utils/: dynamodb.py
backend/lambdas/admin/: handler.py
backend/lambdas/webhook/: handler.py
backend/tests/: conftest.py
backend/tests/config/: test_settings.py
backend/tests/domain/: test_models.py
backend/tests/e2e/: test_admin_flow.py  test_webhook_flow.py
backend/tests/handlers/: test_admin_handler.py  test_webhook_handler.py
backend/tests/services/: test_availability_service.py  test_pricing_service.py
backend/tests/use_cases/: test_generate_ai_response.py  test_notify_owner.py  test_process_incoming_message.py
backend/tests/utils/: test_dynamodb_utils.py
chacara_chatbot/: chacara_chatbot_stack.py
docs/superpowers/plans/: 2026-03-13-webhook-handler-logic.md  2026-03-16-parameter-store-settings.md  (+2 more)
frontend/: .env.example  .env.local  package.json  tsconfig.json
frontend/src/: middleware.ts
infraestructure/: app.py
infraestructure/cdk/: whatsapp_chatbot_stack.py
infrastructure/: app.py
scripts/: send_message.py
tests/unit/: test_chacara_chatbot_stack.py
(+52 files in other folders)
