[project]
name = "chacara-chatbot"
version = "0.1.0"
description = "AI-powered WhatsApp assistant for vacation rental inquiries"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.241.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "boto3>=1.42.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "aws-lambda-powertools>=3.0.0",
    "pendulum>=3.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "boto3-stubs[dynamodb]>=1.42.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "moto[dynamodb]>=5.0.0",
]
